log
Wed 20 Mar 2024 06:37:25 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:9: error: unused variable ‘element’ [-Werror=unused-variable]
   46 |   void* element = malloc(sizeof(int));
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
92b3858
Wed 20 Mar 2024 06:38:00 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
9cdbf1c
Wed 20 Mar 2024 06:38:43 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
a8d770b
Wed 20 Mar 2024 06:40:30 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
374a11a
